# taskie-backend

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  app.py  config.py  docker-compose.test-db.yml  docker-compose.yml  models.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  main.yml  test.yml
alembic/: env.py
alembic/versions/: 00c7705614c1_init.py  0120742e9cc6_init.py  18fab600b8fc_init.py  204d6103061c_.py  3cf34f758524_init.py  53548f6233a4_.py  624523664e50_.py  859a8f9b9afd_init.py  9dd54e28f64d_.py  adba23161fd9_init.py  b82850f6c785_init.py  e23f0d6a8273_.py
app/: main.py
app/api/: error_handlers.py  errors.py  strings.py
app/api/controllers/: auth.py  habits.py  health.py  routines.py  task.py  todos.py  users.py
app/api/dao/: __init__.py  auth_dao.py  routine_dao.py  routine_element_dao.py  routine_log_dao.py  (+2 more)
app/core/: auth.py  config.py  utils.py
app/dao/: __init__.py  auth_dao.py  base.py  routine_dao.py  routine_element_dao.py  routine_log_dao.py  todo_dao.py  user_dao.py
app/database/: db.py
app/exceptions/: exceptions.py
app/models/: models.py
app/repositories/: __init__.py  habit_repository.py  routine_repository.py  task_repository.py
app/schemas/: auth.py  common.py  habit.py  response.py  routine.py  task.py  todo.py  user.py  validator.py
migrations/versions/: 4f8bdd7d9a84_.py  8ea91cd6b440_.py
mock/: create-mock.py
resources/habit/: __init__.py
resources/routine/: __init__.py
resources/todo/: __init__.py
resources/user/: __init__.py
tests/: conftest.py
(+42 files in other folders)
